# Network

./: 1client.py  1server.py  cockieClient.py  cookieClient.py  cookieClient2.py  cookieServer.py  cookieServer2.py  cookiesServer2.py  dic_recieve.py  dic_send.py  echo-client.py  echo.py  multiconn-client.py  network.py  network_monitor.py  ping.py  pyproject.toml  server.py  server_client-ReadMe.md  smb_file_transfair_LINUX.py  smb_file_transfair_WIN.py
gui/: main.py
networkmonitor/: network_monitor.py
system/: dictionary_gpu.json  dictionary_system.json  systemstat_ReadMe.md  systemstats.py  systemstats_json.py
