[tool.poetry]
name = "networkcommunication"
version = "0.1.0"
description = ""
authors = ["Tjark <kontakt@ohioh.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gpiozero = "^1.6.2"
psutil = "^5.9.5"
tabulate = "^0.9.0"
gputil = "^1.4.0"
pyqt5 = "^5.15.9"
fbs = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
