[tool.poetry]
name = "networkcommunication"
version = "0.1.0"
description = ""
authors = ["Tjark <kontakt@ohioh.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gpiozero = "^1.6.2"
psutil = "^5.9.5"
tabulate = "^0.9.0"
gputil = "^1.4.0"
pyqt5 = "^5.15.9"
fbs = "^1.2.1"
sphinx = "^7.0.1"
black = "^23.3.0"
# Linux
# numpy = { url = "https://download.pytorch.org/whl/numpy-1.24.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
# torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-linux_x86_64.whl"}
# torchaudio = { url  = "https://download.pytorch.org/whl/cu118/torchaudio-2.0.2%2Bcu118-cp311-cp311-linux_x86_64.whl"}
# torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp311-cp311-linux_x86_64.whl"}
# Windows 
numpy = { url = "https://download.pytorch.org/whl/numpy-1.24.1-cp311-cp311-win_amd64.whl"}
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-win_amd64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu118/torchaudio-2.0.2%2Bcu118-cp311-cp311-win_amd64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp311-cp311-win_amd64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
